# CT_Filtered-back-projection

./: .clang-format  .gitignore
Codes/1_CT_codes (without GUI)/: CMakeLists.txt  CT_main.cpp  CT_main.h  OpenCV410x64Debug.props  basic_display_functions.cpp
Codes/1_CT_codes (without GUI)/Debug/: vc142.idb
Codes/1_CT_codes (without GUI)/Debug/CT.tlog/: CL.command.1.tlog  CT.lastbuildstate
Codes/1_CT_codes (without GUI)/x64/Debug/: CT.exe.recipe  CT.ilk  practice1.vcxproj.FileListAbsolute.txt  vc142.idb
Codes/1_CT_codes (without GUI)/x64/Debug/CT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CT.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FourierTransformRecon/: Link.txt
FourierTransformRecon/src/: BPF.m  BPF_conv2.m  DFR.m  FBP.m  README.txt
FourierTransformRecon/src/CBP/: Backproject.c  Backproject.mexw64  CBP.m  DirectBackProject.m
